1.修改数据库密码为本地 2.去掉consul服务发现

--- a/txlcn-demo-spring-service-a/pom.xml
+++ b/txlcn-demo-spring-service-a/pom.xml
@@ -20,10 +20,10 @@
             <artifactId>txlcn-demo-common</artifactId>
         </dependency>
 
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-consul-discovery</artifactId>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
